[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/PracticeMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="PracticeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 20.0
margin_right = -50.0
margin_bottom = -20.0
custom_constants/separation = 10

[node name="Sprint Label" type="Label" parent="VBoxContainer"]
margin_right = 924.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Sprint"
align = 1
valign = 2

[node name="Sprint" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 924.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="SpacerL" type="Control" parent="VBoxContainer/Sprint"]
margin_right = 193.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Normal" type="VBoxContainer" parent="VBoxContainer/Sprint"]
margin_left = 243.0
margin_right = 436.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/Sprint/Normal"]
margin_right = 193.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Normal"

[node name="Best" type="Label" parent="VBoxContainer/Sprint/Normal"]
margin_top = 51.0
margin_right = 193.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Top: 1000 (M)"
align = 1
valign = 1

[node name="Expert" type="VBoxContainer" parent="VBoxContainer/Sprint"]
margin_left = 486.0
margin_right = 679.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/Sprint/Expert"]
margin_right = 193.0
margin_bottom = 47.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Expert"

[node name="Best" type="Label" parent="VBoxContainer/Sprint/Expert"]
margin_top = 51.0
margin_right = 193.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Top: 1000 (M)"
align = 1
valign = 1

[node name="SpacerR" type="Control" parent="VBoxContainer/Sprint"]
margin_left = 729.0
margin_right = 924.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Ultra Label" type="Label" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 924.0
margin_bottom = 233.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Ultra"
align = 1
valign = 2

[node name="Ultra" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 243.0
margin_right = 924.0
margin_bottom = 314.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="SpacerL" type="Control" parent="VBoxContainer/Ultra"]
margin_right = 80.0
margin_bottom = 71.0
rect_min_size = Vector2( 80, 0 )

[node name="Normal" type="VBoxContainer" parent="VBoxContainer/Ultra"]
margin_left = 130.0
margin_right = 318.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/Ultra/Normal"]
margin_right = 188.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Normal"

[node name="Best" type="Label" parent="VBoxContainer/Ultra/Normal"]
margin_top = 51.0
margin_right = 188.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Top: 1000 (M)"
align = 1
valign = 1

[node name="Hard" type="VBoxContainer" parent="VBoxContainer/Ultra"]
margin_left = 368.0
margin_right = 556.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/Ultra/Hard"]
margin_right = 188.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Hard"

[node name="Best" type="Label" parent="VBoxContainer/Ultra/Hard"]
margin_top = 51.0
margin_right = 188.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Top: 1000 (M)"
align = 1
valign = 1

[node name="Expert" type="VBoxContainer" parent="VBoxContainer/Ultra"]
margin_left = 606.0
margin_right = 794.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/Ultra/Expert"]
margin_right = 188.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Expert"

[node name="Best" type="Label" parent="VBoxContainer/Ultra/Expert"]
margin_top = 51.0
margin_right = 188.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Top: 1000 (M)"
align = 1
valign = 1

[node name="SpacerR" type="Control" parent="VBoxContainer/Ultra"]
margin_left = 844.0
margin_right = 924.0
margin_bottom = 71.0
rect_min_size = Vector2( 80, 0 )

[node name="Marathon Label" type="Label" parent="VBoxContainer"]
margin_top = 324.0
margin_right = 924.0
margin_bottom = 395.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Marathon"
align = 1
valign = 2

[node name="Marathon" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 405.0
margin_right = 924.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="Normal" type="VBoxContainer" parent="VBoxContainer/Marathon"]
margin_right = 193.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/Marathon/Normal"]
margin_right = 193.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Normal"

[node name="Best" type="Label" parent="VBoxContainer/Marathon/Normal"]
margin_top = 51.0
margin_right = 193.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Top: 1000 (M)"
align = 1
valign = 1

[node name="Hard" type="VBoxContainer" parent="VBoxContainer/Marathon"]
margin_left = 243.0
margin_right = 436.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/Marathon/Hard"]
margin_right = 193.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Hard"

[node name="Best" type="Label" parent="VBoxContainer/Marathon/Hard"]
margin_top = 51.0
margin_right = 193.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Top: 1000 (M)"
align = 1
valign = 1

[node name="Expert" type="VBoxContainer" parent="VBoxContainer/Marathon"]
margin_left = 486.0
margin_right = 679.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/Marathon/Expert"]
margin_right = 193.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Expert"

[node name="Best" type="Label" parent="VBoxContainer/Marathon/Expert"]
margin_top = 51.0
margin_right = 193.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Top: 1000 (M)"
align = 1
valign = 1

[node name="Master" type="VBoxContainer" parent="VBoxContainer/Marathon"]
margin_left = 729.0
margin_right = 924.0
margin_bottom = 71.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/Marathon/Master"]
margin_right = 195.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Master"

[node name="Best" type="Label" parent="VBoxContainer/Marathon/Master"]
margin_top = 51.0
margin_right = 195.0
margin_bottom = 71.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Top: 1000 (M)"
align = 1
valign = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_top = 486.0
margin_right = 924.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="VBoxContainer/Sprint/Normal/Button" to="." method="_on_SprintNormal_pressed"]
[connection signal="pressed" from="VBoxContainer/Sprint/Expert/Button" to="." method="_on_SprintExpert_pressed"]
[connection signal="pressed" from="VBoxContainer/Ultra/Normal/Button" to="." method="_on_UltraNormal_pressed"]
[connection signal="pressed" from="VBoxContainer/Ultra/Hard/Button" to="." method="_on_UltraHard_pressed"]
[connection signal="pressed" from="VBoxContainer/Ultra/Expert/Button" to="." method="_on_UltraExpert_pressed"]
[connection signal="pressed" from="VBoxContainer/Marathon/Normal/Button" to="." method="_on_MarathonNormalButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Marathon/Hard/Button" to="." method="_on_MarathonHardButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Marathon/Expert/Button" to="." method="_on_MarathonExpertButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Marathon/Master/Button" to="." method="_on_MarathonMasterButton_pressed"]
